...
                Text(isLoading ? "..." : isEditing ? "Update Task":"Add Task")
                    .foregroundStyle(.black)
            }
            .padding()
            .frame(maxWidth: .infinity)
        }
        .accessibilityIdentifier("AddTaskButton")
        .background(
            ZStack {
                if !isDisabled {
                    AnimatedButtonGradient()
                        .mask(
                            RoundedRectangle(cornerRadius: 16)
...
