...
                    .foregroundStyle(.secondary)
                    .lineLimit(1)
                    .accessibilityElement()
                    .accessibilityLabel(Text("Task description: \(item.descriptions ?? "")"))
                
                if item.isdone {
                    Text("Done")
                        .accessibilityElement()
                        .accessibilityLabel(Text("Task is done"))
                } else {
                    if Date() < item.duedate! {
                        ProgressView(timerInterval: Date()...(item.duedate ?? Date()), countsDown: true)
                    } else {
...
