...
                
            }
            .frame(maxHeight: .infinity)
            
        }
        .accessibility(addTraits: .isButton)
        .accessibilityIdentifier("OpenTaskButton")
        .ignoresSafeArea()
        .background(Color.clear.opacity(0.05).ignoresSafeArea())
        .onAppear {
            animateView()
        }
    }
...
